# industrial-data-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  db.py  main.py  model_loader.py  requirements.txt  router.py  schemas.py
dashboard/: Dockerfile  package.json  tailwind.config.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/model/: page.tsx
dashboard/src/app/predictions/: page.tsx
dashboard/src/components/: FeatureChart.tsx  KpiCard.tsx  ModelMetrics.tsx  PredictionTable.tsx
dashboard/src/lib/: api.ts  types.ts
etl/: glue_job.py  load_features.py  upload_raw.py  validate_schema.py
infra/: README.md  schema.sql  setup_ecr.py  setup_glue.py  setup_rds.py  setup_s3.py
ml/: evaluate.py  features.py  predict.py  train.py
scripts/: feature_engineering.py  load_to_postgres.py  upload_to_s3.py
tests/: conftest.py  test_api.py  test_etl.py  test_features.py
